<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/title_country_name"
        android:key="@string/pref_locationVN_key"
        android:defaultValue="@string/pref_locationVN_hue"
        android:entryValues="@array/pref_locationVN_values"
        android:entries="@array/pref_locationVN_options">

    </ListPreference>

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options">

    </ListPreference>

    <!--<EditTextPreference-->
        <!--android:title="@string/pref_location_label"-->
        <!--android:key="@string/pref_location_key"-->
        <!--android:defaultValue="@string/pref_location_default"-->
        <!--android:inputType="text"-->
        <!--android:singleLine="true">-->
    <!--</EditTextPreference>-->

</PreferenceScreen>